# px4_ros2_lec

./: .gitignore  .gitmodules  README.md  docker_run.sh  network.sh
lab/src/lab02_helloworld/my_python_pkg/: setup.py
lab/src/lab02_helloworld/my_python_pkg_adv/: package.xml  setup.cfg  setup.py
lab/src/lab03_ament_cmake/my_cpp_pkg/: package.xml
lab/src/lab04_topic_programming/pubsub_package/: package.xml
lab/src/lab05_service_programming/calculator/: setup.py
lab/src/lab06_action_parameter_programming/py_actioncli/: package.xml  setup.py
lab/src/lab06_action_parameter_programming/py_param/: setup.py
lab/src/lab08_Simple Rover Model Generation/myrover_with_camera/: model.sdf
lab/src/lab08_simple_rover_model_generation/: simple_rover.urdf.xacro
lab/src/lab08_simple_rover_model_generation/simple_rover/: CMakeLists.txt
lab/src/lab08_simple_rover_model_generation/simple_rover/launch/: line_follower.launch.py  sdf.launch.py  urdf.launch.py
lab/src/lab08_simple_rover_model_generation/simple_rover/models/simple_rover/: model.config  model.sdf
lab/src/lab08_simple_rover_model_generation/simple_rover/urdf/: camera.gazebo.xacro  simple_rover.urdf.xacro
lab/src/lab08_simple_rover_model_generation/simple_rover/worlds/: simplerover_sdf.world
lab/src/lab09_Simple Rover Operation/line_follower/: CMakeLists.txt  package.xml
lab/src/lab09_Simple Rover Operation/rover_line_follower/: build.bash  setup.cfg  setup.py
lab/src/lab10_DDS_setting/: Lab10adv.xml
lab/src/lab10_px4_ros2/: package.xml
lab/src/lab11_px4_ros2_new_topic/: package.xml  setup.py
(+83 files in other folders)
